mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongo-express
  labels: 
    app: mongo-express
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: mongo-express
  template:                   #methna idla pahala ta yanne pod definition ekai
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer          #internal services also acts a s aload balancer   , this type name ek dunnama meka accept krnwa external requests , it assigns service an external IP address and so accepts external requests just like i mentioned earlier  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000       #meke theruma awilla me service eke xternal service ekk hinda api browser eke mona port eka ghlad me service ekt adla pod eka run krnne kiyna eki . ethkot mekt denna puluwan port walal agayata range ekk thiynwa e range ek awilla 30000 - 32767

      #this nodePort means that it is a external ip address , the port you need to put into browser
